Se añadieron endpoints de consultas de cuentas para usuarios de tipo CLIENTE ademas se mejoraron las consultas de cuentas a traves de un usuario ADMIN